--- a/mobile.css
+++ b/mobile.css
@@ -1,93 +1,60 @@
-*{
-    padding: 0;
-    margin: o;
-    font-family: sans-serif;
+body {
+    display: grid;
+    grid-template-columns: 20% 60% 80%;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "header"
+        "nav"
+        "main"
+        "aside"
+        "footer";
 }
 
-.hero{
-    position: relative;
-    width: 100%;
-    height: 100wh;
-    background: beige;
-}
-
-nav{
-    display: flex;
-    width: 87%;
-    margin: auto;
-    padding: 20px 0;
-    align-items: center;
-    justify-content: space-between;
-}
-
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
-}
-
-nav ul li a{
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-}
-
-nav ul li a:hover{
-    color:orangered;
-}
-
-.detel{
-    margin-left: 9%;
-    margin-top: 16%;
-}
-
-.detel{
-    font-size: 50px;
-    color:black;
-    margin-bottom: 20px;    
-}
-
-span{
-    color:yellow;
-}
-
-.detel p{
-    color: blueviolet;
-    line-height: 22px;
-}
-
-.detel a{
-    background: grey;
-    padding: 10px 18px;
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
-    display: inline-block;
-    margin: 30px 0;
-    border-radius: 5px;
-}
-
-.images{
-    width: 41%;
-    height: 80%;
-    position: absolute;
-    bottom: 0;
-    right: 100px;
-}
-
-.images img{
-    height: 100%;
-    position: absolute;
+nav {
+    display: none;
+    background-color: blue;
+    position: fixed;
+    top: 0;
     left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    transition: bottom 1s, left 1s;
+    width: 50%;
+    height: 100vh;
 }
 
-.images:hover .shapes{
-    bottom:40px;
+.showNav {
+    height: 0.8em;
+    width: 1.25em;
+    display: block;
+    border-top: 0.2em solid white;
+    border-bottom: 0.2em solid white;
+    border-radius: 0.1em;
 }
 
-.images:hover .profilepo2{
-    left: 45%;
+.showNav::before {
+    content: '';
+    position: absolute;
+    width: 1.25em;
+    margin-top: 0.3em;
+    border-top: 0.2em solid #fff;
 }
+
+#clicked .on {
+    display: block;
+}
+
+#clicked .off {
+    display: none;
+}
+
+#clicked:target .on {
+    display: none;
+}
+
+#clicked:target .off {
+    display: block
+}
+
+#clicked:target nav {
+    display: block;
+}
+
+
